[tool.poetry]
name = "til24-autonomy"
version = "0.1.0"
description = "template for python api server"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
python-dotenv = "^1.0.1"
fastapi-slim = "^0.111.0"
uvicorn = "^0.29.0"
uvloop = "^0.19.0"
httptools = "^0.6.1"
websockets = "^12.0"
robomaster = "^0.1.1.68"
colorlog = "^6.8.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
poethepoet = "^0.26.1"
rich = "^13.7.1"

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
ipykernel = "*"
ipympl = "*"
ipywidgets = "*"

[tool.poe.tasks]
dev = { cmd = "python dev.py", use_exec = true }
prod = { cmd = "docker run --rm -it --env-file ../.env -p 5003:5003 nyanplan3-autonomy:latest", use_exec = true }
test = "echo You cant test this without main...?"
publish = "docker push -a asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-autonomy"
requirements = "poetry export -o requirements.txt --without-hashes"

[tool.poe.tasks.build]
cmd = """docker build -f Dockerfile . \
  -t nyanplan3-autonomy:latest \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-autonomy:latest \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-autonomy:finals \
  -t nyanplan3-autonomy:${tag} \
  -t asia-southeast1-docker.pkg.dev/dsta-angelhack/repository-nyanplan3/nyanplan3-autonomy:${tag} \
"""
deps = ["requirements"]
args = [{ name = "tag", positional = true, required = true }]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
